# ChangeLog for eclass directory
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.1705 2015/07/09 07:11:25 graaff Exp $

  09 Jul 2015; Hans de Graaff <graaff@gentoo.org> ruby-single.eclass:
  Update documentation.

  08 Jul 2015; Bernard Cafarelli <voyageur@gentoo.org> webapp.eclass:
  Fix elog in webapp_serverowned and ebeep in newer EAPIs

  07 Jul 2015; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  -mozconfig-v4.31.eclass, -mozconfig-v5.33.eclass, +mozconfig-v6.38.eclass,
  +mozconfig-v6.39.eclass:
  removed old mozconfig eclasses, added new

  06 Jul 2015; William Hubbs <williamh@gentoo.org> golang-build.eclass:
  Add back the subslot operator in the dependency on Go. We need this so that
  we have the Go version the package was built with recorded.

  06 Jul 2015; Michael Palimaka <kensington@gentoo.org> kde5.eclass:
  Add missing USE dependency default wrt bug #554056.

  05 Jul 2015; Hans de Graaff <graaff@gentoo.org> ruby-fakegem.eclass:
  Document that some variables must be set before inheriting the eclass.

  04 Jul 2015; Mike Gilbert <floppym@gentoo.org> distutils-r1.eclass,
  python-any-r1.eclass, python-r1.eclass, python-single-r1.eclass,
  python-utils-r1.eclass:
  Replace links to python-r1 dev guide with links to the wiki.

  04 Jul 2015; Manuel Rüger <mrueg@gentoo.org> python-r1.eclass:
  Update URI.

  03 Jul 2015; William Hubbs <williamh@gentoo.org> golang-build.eclass:
  drop the slot dependency; it was pointed out to me that they do not trigger
  rebuilds in DEPEND

  01 Jul 2015; Manuel Rüger <mrueg@gentoo.org> kde4-base.eclass:
  Sync with overlay. Add SRC_URIs for newer KDE SC, KDE Workspace releases and
  KDEPIM 4.4 no-akonadi branches.

  29 Jun 2015; Manuel Rüger <mrueg@gentoo.org> ruby-ng.eclass:
  Quote RUBY_S and sub_S as the directory could contain spaces.

  29 Jun 2015; Davide Pesavento <pesa@gentoo.org> qmake-utils.eclass: